# kafka-msg-publisher

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  kafka.rs  lib.rs  main.rs
src/app/: app.component.css  app.component.html  app.component.ts
src/app/services/: tauri.service.ts
