[package]
name = "kafka-msg-publisher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kafka_msg_publisher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kafka - pure Rust client (no C dependencies for portability)
rskafka = { version = "0.6", features = ["transport-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"

# Config persistence
dirs = "5"

# DateTime handling
chrono = "0.4"

# TLS/SSL support for secured Kafka
rustls = "0.23"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
rustls-pki-types = "1"

